<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.fragments.LoginFragment">

    <View
    android:id="@+id/vwTopViewLog"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="@drawable/top_login"/>


    <ImageView
    android:id="@+id/ivIcon"
    android:layout_width="200dp"
    android:layout_height="220dp"
    android:src="@drawable/ic_welcome_login"
    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cvProgressL"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/loader"
        android:visibility="invisible"
        >

    </com.airbnb.lottie.LottieAnimationView>


    <EditText
        android:id="@+id/etEmailLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/vwTopViewLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold">
    </EditText>

    <EditText
        android:id="@+id/etPasswordLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="15dp"
        android:padding="15dp"
        android:background="@drawable/round_border"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:background="@drawable/button_style"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
    </androidx.appcompat.widget.AppCompatButton>
    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textFontWeight="800"
        android:fontFamily="sans-serif"
        android:text="@string/forgot"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </TextView>
    <TextView
        android:id="@+id/tvNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textFontWeight="800"
        android:fontFamily="sans-serif"
        android:text="@string/newUser"
        android:layout_marginTop="15dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tvForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRegister"
        >

    </TextView>
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@drawable/text_pressed"
        android:textSize="15sp"
        android:textFontWeight="800"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="118dp"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tvForgot"
        app:layout_constraintStart_toEndOf="@id/tvNew"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ivGoogle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/google_shadow"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="10dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ivFacebook"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        app:layout_constraintStart_toEndOf="@+id/ivGoogle"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/facebook_shadow"/>

    <ImageView
        android:id="@+id/ivFirebase"
        android:layout_width="140dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/ivGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:background="@drawable/firebase_shadow" />

</androidx.constraintlayout.widget.ConstraintLayout>