<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.fragments.RegisterFragment">

    <View
        android:id="@+id/vwTopViewReg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/top_login"
        >
    </View>

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_sign_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cvProgressR"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/loader"
        android:visibility="invisible">

    </com.airbnb.lottie.LottieAnimationView>

    <EditText
        android:id="@+id/etNameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/vwTopViewReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold">

    </EditText>

    <EditText
        android:id="@+id/etEmailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="15dp"
        android:padding="15dp"
        android:background="@drawable/round_border"
        app:layout_constraintTop_toBottomOf="@+id/etNameReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
    </EditText>

    <EditText
        android:id="@+id/etPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="15dp"
        android:padding="15dp"
        android:background="@drawable/round_border"
        app:layout_constraintTop_toBottomOf="@+id/etEmailReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
    </EditText>
    <EditText
        android:id="@+id/etCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:hint="@string/check"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="15dp"
        android:padding="15dp"
        android:background="@drawable/round_border"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

    </EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:text="@string/newRegister"
        android:background="@drawable/button_style"
        app:layout_constraintTop_toBottomOf="@+id/etCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">
    </androidx.appcompat.widget.AppCompatButton>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/firebase_shadow"/>


</androidx.constraintlayout.widget.ConstraintLayout>